add: rebuild knowledge base and algorithm decks